# telegram_project

./: .gitignore  create_tg_bot.py  get_info_from_games.py  main.py  pyproject.toml  tg_main_bot.py
notebooks/: EDA.ipynb  intro.ipynb
src/: parsing_functions.py
src/parsing/: parsing_functions.py
src/tg_bot/: tg_client_kb.py
