[tool.poetry]
name = "project_template_ds"
version = "0.1.0"
description = ""
authors = ["mikhego"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.0"
pandas = "^1.4.3"
plotly = "^5.9.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
